--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
+    "axios": "^1.6.8",
     "firebase": "^10.8.1",
     "framer-motion": "^11.0.22",
+    "js-file-download": "^0.4.12",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +27,7 @@
     "react-international-phone": "^4.2.6",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.9",
+    "resend": "^3.2.0",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
