--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@leenguyen/react-flip-clock-countdown": "^1.5.1",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
