--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-international-phone": "^4.2.6",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.9",
+    "react-use": "^17.5.0",
     "resend": "^3.2.0",
     "sharp": "^0.33.3"
   },
