--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.8.1",
     "framer-motion": "^11.0.22",
+    "fs": "^0.0.1-security",
     "js-file-download": "^0.4.12",
     "next": "14.1.3",
     "react": "^18",
